fix: invert less variables when dark mode is enabled

--- a/extensions/tags/less/common/TagLabel.less
+++ b/extensions/tags/less/common/TagLabel.less
@@ -20,6 +20,10 @@
     &.tag-dark {
       --tag-color: @body-bg;
 
+      & when (@config-dark-mode = true) {
+        --tag-color: @text-color;
+      }
+
       .TagLabel-text {
         color: var(--tag-color) !important;
       }
@@ -27,6 +31,10 @@
 
     &.tag-light {
       --tag-color: @text-color;
+
+      & when (@config-dark-mode = true) {
+        --tag-color: @body-bg;
+      }
 
       .TagLabel-text {
         color: var(--tag-color) !important;
